[project]
name = "medi-guard-env"
version = "0.1.0"
description = "Healthcare billing audit environment for AI agents"
authors = [
    { name = "Sidharth P Nair" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "api:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"